--- a/README.org
+++ b/README.org
@@ -4,7 +4,8 @@
 #+KEYWORDS: readme
 
 Learning Common Lisp by making a simplest of roguelike.
-	
+Navigate history using Tags.
+
 * System Setup
   Development OS is Window 10 [1909].
 
@@ -80,7 +81,12 @@ MIT
    #+END_SRC
 4. SUCCESS!
 
-
+* Lesson 2: Move using key-presses
+1. Add global vars to hold position, size and step-size values.
+2. Modify and rename =quit-on-escape= key callback to =on-key-press=.
+3. Add logic for each cardinal direction, mapped to WASD and Arrow Keys.
+4. Execute =basic-window= same as before.
+5. SUCCESS!
 
 
 
